[POLAR] Cleanup